--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,17 +1,17 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "Dulanga Weerakoon"
+  uri         : "http://dulangaweerakoon.com"
+  email       : "mweerakoon.2019@phdcs.smu.edu.sg"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
 
 Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
+  name        : "Dulanga Weerakoon"
+  email       : "mweerakoon.2019@phdcs.smu.edu.sm"
   bio         : "I ordered what?"
   avatar      : "bio-photo.jpg"
   twitter     : "name2"
