--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Name Name:
   name        : "Dulanga Weerakoon"
   uri         : "http://dulangaweerakoon.com"
-  email       : "mweerakoon.2019@phdcs.smu.edu.sg"
+  email       : "dulanga.weerakoon@smart.mit.edu"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
@@ -11,7 +11,7 @@ Name Name:
 
 Name2 Name2:
   name        : "Dulanga Weerakoon"
-  email       : "mweerakoon.2019@phdcs.smu.edu.sm"
+  email       : "dulanga.weerakoon@smart.mit.edu"
   bio         : "I ordered what?"
   avatar      : "bio-photo.jpg"
   twitter     : "name2"
